--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
+  <script src="/db.js"></script>
+  <script src="/script.js"></script> -->
 </html>
